== Git (Unreleased)

* Minor enhancements

  * When using Rails 2.3, use Rack::Utils to parse params (Matthew Ford)
  * Initial Merb and Sinatra compatibility for Selenium mode (Corey Donohoe)
  * Add application_framework config for Selenium mode to determine how to
    start and stop the app server (Corey Donohoe)

== 0.4.2 / 2009-02-24

* Major enhancements

  * Significant improvements to have_selector. It now supports specifying
    attributes in a hash and :count and :content options. See
    have_selector_spec.rb for more.
  * Add the same functionality mentioned above to have_xpath
    
* Minor enhancements

  * Squeeze extra whitespace out of failures messages from contain
    matcher
  * Detect infinite redirects and raise a Webrat::InfiniteRedirectError
    (Daniel Lucraft)

* Bug fixes

  * Properly quote single and double quotes strings in XPath
  * Fix warning caused by Nokogiri deprecating CSS::Parser.parse
    (Aaron Patterson)
  * Accept do/end blocks in matchers. [#157] (Peter Jaros)
  * Quote --chdir option to mongrel_rails to support RAILS_ROOTs with spaces
    (T.J. VanSlyke)

== 0.4.1 / 2009-01-31

* Minor enhancements

  * Support Sinatra 0.9 (Harry Vangberg)
  * Update query param parsing to work with latest Edge Rails
  * Added #redirected_to method to easily check where an external redirect was
    redirected to (Adam Greene)
  * Recognize input tags with type button (Lena Herrmann)
  * Add uncheck method to Selenium mode (Lee Bankewitz)
    
* Bug fixes

  * Make requests to a Rails app using a full URL instead of a relative path. This change
    is helpful for Rails apps that use subdomains. (John Hwang and Zach Dennis)
  * Follow redirects that are on the same domain but a different subdomain
    (Adam Greene)
  * rescue from Webrat::TimeoutError in selenium matchers which allows NegativeMatchers
    to behave correctly (Noah Davis)
  * Switch to using selenium.click instead of .check when checking a checkbox
    (Noah Davis)